Fixed an problem I made mistakenly before wrapping up the work, hehe!

--- a/Support/stylesheet/faq.css
+++ b/Support/stylesheet/faq.css
@@ -160,9 +160,9 @@ main {
     gap: 10px;
 }
 .faq-section {
+    display: flex;
     flex-direction: column;
     gap: 20px;
-    display: none;
 }
 details {
     background-color: var(--bg-secondary);
